name:                hasktorch-interface
version:             0.1.0.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         Shared types
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     THTypes, TorchStructs
  other-modules:       
  hs-source-dirs:      src
  include-dirs:        src
  includes:            torch_structs.h
  Build-tools:         c2hs
  build-depends:       base >= 4.7 && < 5
                     , inline-c >= 0.6

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  