cabal-version:       3.0
name:                libtorch-ffi-helper
version:             2.0.0.0
-- The prefix(2.0) of this version("2.0.0.0") is the same as libtorch's one.
synopsis:            ffi-wrapper for macos
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple

library
 exposed-modules:     Torch.Internal.Unmanaged.Helper
                    , GHC.NotExport.Plugin
 hs-source-dirs: src
 default-language: Haskell2010
 build-depends:       base >= 4.7 && < 5
 build-depends:       ghc >=8.5
