cabal-version:       2.1
name:                libtorch-ffi
version:             1.5.0.0
-- The prefix(1.5) of this version("1.5.0.0") is the same as libtorch's one.
synopsis:            test out alternative options for ffi interface to libtorch 1.x
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD-3-Clause
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple

Flag cuda
 Description: A flag to link libtorch_cuda.
 Default: False
 Manual: True

Flag gcc
 Description: A flag to use gcc on macos
 Default: False
 Manual: True

library
 exposed-modules:     Torch.Internal.Type
                    , Torch.Internal.Const
                    , Torch.Internal.Cast
                    , Torch.Internal.Class
                    , Torch.Internal.GC
                    , Torch.Internal.Unmanaged.Native
                    , Torch.Internal.Unmanaged.Type.Tuple
                    , Torch.Internal.Unmanaged.Type.Generator
                    , Torch.Internal.Unmanaged.Type.IntArray
                    , Torch.Internal.Unmanaged.Type.Scalar
                    , Torch.Internal.Unmanaged.Type.Storage
                    , Torch.Internal.Unmanaged.Type.Tensor
                    , Torch.Internal.Unmanaged.Type.TensorList
                    , Torch.Internal.Unmanaged.Type.TensorOptions
                    , Torch.Internal.Unmanaged.Type.StdString
                    , Torch.Internal.Unmanaged.Type.StdArray
                    , Torch.Internal.Unmanaged.Type.Context
--                    , Torch.Internal.Unmanaged.Type.ConstQuantizerPtr
                    , Torch.Internal.Unmanaged.Type.Extra
                    , Torch.Internal.Unmanaged.Type.Dimname
                    , Torch.Internal.Unmanaged.Type.DimnameList
                    , Torch.Internal.Unmanaged.Type.Symbol
                    , Torch.Internal.Unmanaged.Type.IValue
                    , Torch.Internal.Unmanaged.Type.IValueList
                    , Torch.Internal.Unmanaged.Type.C10List
                    , Torch.Internal.Unmanaged.Type.C10Dict
                    , Torch.Internal.Unmanaged.Type.C10Tuple
                    , Torch.Internal.Unmanaged.Type.Module
                    , Torch.Internal.Managed.Cast
                    , Torch.Internal.Managed.Native
                    , Torch.Internal.Managed.Type.Tuple
                    , Torch.Internal.Managed.Type.Generator
                    , Torch.Internal.Managed.Type.IntArray
                    , Torch.Internal.Managed.Type.Scalar
                    , Torch.Internal.Managed.Type.Storage
                    , Torch.Internal.Managed.Type.Tensor
                    , Torch.Internal.Managed.Type.TensorList
                    , Torch.Internal.Managed.Type.TensorOptions
                    , Torch.Internal.Managed.Type.StdString
                    , Torch.Internal.Managed.Type.StdArray
                    , Torch.Internal.Managed.Type.Context
--                    , Torch.Internal.Managed.Type.ConstQuantizerPtr
                    , Torch.Internal.Managed.Type.Extra
                    , Torch.Internal.Managed.Type.Dimname
                    , Torch.Internal.Managed.Type.DimnameList
                    , Torch.Internal.Managed.Type.Symbol
                    , Torch.Internal.Managed.Type.IValue
                    , Torch.Internal.Managed.Type.IValueList
                    , Torch.Internal.Managed.Type.C10List
                    , Torch.Internal.Managed.Type.C10Dict
                    , Torch.Internal.Managed.Type.C10Tuple
                    , Torch.Internal.Managed.Type.Module
                    , Torch.Internal.Unmanaged.Autograd
                    , Torch.Internal.Unmanaged.TensorFactories
                    , Torch.Internal.Unmanaged.Serialize
                    , Torch.Internal.Managed.Autograd
                    , Torch.Internal.Managed.TensorFactories
                    , Torch.Internal.Managed.Serialize
 hs-source-dirs: src
 default-language: Haskell2010
 build-depends:       base >= 4.7 && < 5
                    , inline-c-cpp >= 0.4.0.0
                    , inline-c >= 0.9.0.0
                    , optparse-applicative >= 0.14.3.0
                    , containers
                    , template-haskell
                    , bytestring
                    , safe-exceptions
                    , sysinfo
                    , async
                    , libtorch-ffi-helper
 extra-libraries:     c10
                    , torch
                    , torch_cpu
 if os(darwin)
  extra-libraries:     c++
 else
  extra-libraries:     stdc++

 if flag(cuda)
  extra-libraries:     torch_cuda

 extra-ghci-libraries: stdc++
 if os(darwin)
  ld-options: -Wl,-keep_dwarf_unwind
  if !flag(gcc)
    ghc-options:       -optc-std=c++14 -optc-xc++
 default-extensions:          Strict
                            , StrictData


test-suite spec
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:   BasicSpec
                 , MemorySpec
--  libtorch-1.3 does not work this grad-function. But grad of higher level api works.
--                 , BackwardSpec
                 , CudaSpec
                 , GeneratorSpec
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , libtorch-ffi
                     , hspec
                     , hspec-discover
                     , safe-exceptions
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
  default-extensions:          Strict
                             , StrictData
