name:                hasktorch-nn
version:             0.1.0.0
synopsis:            Neural Network API
description:         misc utilities
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable autograd
  default-language:    Haskell2010
  other-modules:       
  hs-source-dirs:      src
  main-is:             FeedForward.hs
  build-depends:       base >= 4.7 && < 5
                     , hasktorch-core
                     , hasktorch-interface
                     , hasktorch-raw
                     , hasktorch-tools
                     , hspec >= 2.4.4
                     , text >= 1.2.2.2

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  