name:                hasktorch-raw
version:             0.1.0.0
synopsis:            Torch for tensors and dynamic neural networks in Haskell
description:         core C bindings
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     
                       THByteTensor
                     , THDoubleTensor
                     , THFloatTensor
                     -- , THHalfTensor
                     , THIntTensor
                     , THLongTensor
                     , THShortTensor

                     , THByteStorage
                     , THDoubleStorage
                     , THFloatStorage
                     -- , THHalfStorage
                     , THIntStorage
                     , THLongStorage
                     , THShortStorage

                     , THByteStorageCopy
                     , THDoubleStorageCopy
                     , THFloatStorageCopy
                     -- , THHalfStorageCopy
                     , THIntStorageCopy
                     , THLongStorageCopy
                     , THShortStorageCopy

                     , THByteTensorMath
                     , THDoubleTensorMath
                     , THFloatTensorMath
                     -- , THHalfTensorMath
                     , THIntTensorMath
                     , THLongTensorMath
                     , THShortTensorMath

                     , THByteTensorRandom
                     , THDoubleTensorRandom
                     , THFloatTensorRandom
                     -- , THHalfTensorRandom
                     , THIntTensorRandom
                     , THLongTensorRandom
                     , THShortTensorRandom

                     , THByteBlas
                     , THDoubleBlas
                     , THFloatBlas
                     -- , THHalfBlas
                     , THIntBlas
                     , THLongBlas
                     , THShortBlas

                     -- TODO: why are pos def functions not included in TH_API
                     , THByteLapack
                     , THDoubleLapack
                     , THFloatLapack
                     -- , THHalfLapack
                     , THIntLapack
                     , THLongLapack
                     , THShortLapack

                     , THByteTensorLapack
                     , THDoubleTensorLapack
                     , THFloatTensorLapack
                     -- , THHalfTensorLapack
                     , THIntTensorLapack
                     , THLongTensorLapack
                     , THShortTensorLapack

                     , THByteTensorConv
                     , THDoubleTensorConv
                     , THFloatTensorConv
                     -- , THHalfTensorConv
                     , THIntTensorConv
                     , THLongTensorConv
                     , THShortTensorConv

                     , THByteTensorCopy
                     , THDoubleTensorCopy
                     , THFloatTensorCopy
                     -- , THHalfTensorCopy
                     , THIntTensorCopy
                     , THLongTensorCopy
                     , THShortTensorCopy

                     , THByteVector
                     , THDoubleVector
                     , THFloatVector
                     -- , THHalfVector
                     , THIntVector
                     , THLongVector
                     , THShortVector

                     , THFile
                     , THDiskFile
                     , THLogAdd
                     , THMemoryFile
                     , THStorage
                     , THRandom
                     , THSize

  hs-source-dirs:      src, src/generic
  build-depends:       base >= 4.7 && < 5
                     , hasktorch-interface
                     , hspec >= 2.4.4
                     , text >= 1.2.2.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  