name:                torch-tensor
version:             0.1.0.0
synopsis:            Torch for tensors and dynamic neural networks in Haskell
description:         higher level tensor interface
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Tensor
                     , TensorTypes
                     , TensorUtils
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , torch-core
                     , torch-interface
                     , text >= 1.2.2.2

executable memory-test
  default-language:    Haskell2010
  main-is:             MemoryTest.hs
  other-modules: Tensor, TensorTypes, TensorUtils
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , torch-core
                     , torch-interface
                     , torch-tensor >= 0.1

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  